Fix: Set homepage to dot for GH Pages

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   
   "name": "furkan-portfolio-universe",
   
-  "homepage": "https://mehmetfurkanakpinar.com",
+  "homepage": ".",
   
   "version": "1.0.0",
   
