Fix homepage for GitHub Pages and set repo to public

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   
   "name": "furkan-portfolio-universe",
   
-  "homepage": ".",
+  "homepage": "https://mehmetfurkanakpinar.com/",
   
   "version": "1.0.0",
   
